--- a/ansible/roles/bootloader/tasks/main.yml
+++ b/ansible/roles/bootloader/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: Install systemd-boot
-  command: arch-chroot {{chroot_dir}} bootctl install
+  command: bootctl install
   args:
-    creates: /mnt/boot/EFI/systemd/systemd-bootx64.efi
+    creates: /boot/EFI/systemd/systemd-bootx64.efi
 
 - name: Get root's UUID
   command: lsblk -n -o UUID /dev/sda2
@@ -12,7 +12,7 @@
 - name: Create systemd-boot loader.conf
   copy:
     src: files/loader.conf
-    dest: /mnt/boot/loader/loader.conf
+    dest: /boot/loader/loader.conf
     mode: 0644
 
 - name: Install systemd-boot entry arch.conf
@@ -20,10 +20,11 @@
     root_uuid: "{{ _uuid.stdout_lines[0] }}"
   template:
     src: templates/arch.conf.j2
-    dest: /mnt/boot/loader/entries/arch.conf
+    dest: /boot/loader/entries/arch.conf
+    mode: 0644
 
 #- name: Add pacman hook for systemd-boot
 #  copy:
 #    src: files/100-systemd-boot.hook
-#    dest: /mnt/etc/pacman.d/hooks/100-systemd-boot.hook
+#    dest: /etc/pacman.d/hooks/100-systemd-boot.hook
 #    mode: 0644
