--- a/ansible/roles/system-config/tasks/main.yml
+++ b/ansible/roles/system-config/tasks/main.yml
@@ -1,19 +1,16 @@
 ---
-- name: fstab
-  shell: "genfstab -U /mnt >> /mnt/etc/fstab"
-
 - name: time zone
   file:
-    src: /mnt/usr/share/zoneinfo/Europe/Stockholm
-    dest: /mnt/etc/localtime
+    src: /usr/share/zoneinfo/Europe/Stockholm
+    dest: /etc/localtime
     state: link
 
 - name: Sync time with hardware clock
-  shell: arch-chroot /mnt hwclock --systohc
+  shell: hwclock --systohc
 
 - name: Create locale.gen
   copy:
-    dest: /mnt/etc/locale.gen
+    dest: /etc/locale.gen
     content: |
       en_GB.UTF-8 UTF-8
       de_DE.UTF-8 UTF-8
@@ -21,47 +18,47 @@
     mode: 0644
 
 - name: Run locale-gen
-  shell: arch-chroot /mnt locale-gen
+  shell: locale-gen
 
 - name: Set LANG variable
   copy:
-    dest: /mnt/etc/locale.conf
+    dest: /etc/locale.conf
     content: LANG=de_DE.UTF-8
     mode: 0644
 
 - name: Make swedish keyboard layout persistent
   copy:
-    dest: /mnt/etc/vconsole.conf
+    dest: /etc/vconsole.conf
     content: "KEYMAP=sv-latin1"
     mode: 0644
 
 - name: Set hostname
   copy:
-    dest: /mnt/etc/hostname
+    dest: /etc/hostname
     content: "{{hostname}}"
     mode: 0644
 
 - name: Add IPv4 loopback address to hosts file
   lineinfile:
-    path: /mnt/etc/hosts
+    path: /etc/hosts
     regexp: '^127\.0\.0\.1\s+localhost'
     line: 127.0.0.1	localhost
 
 - name: Add IPv6 loopback address to hosts file
   lineinfile:
-    path: /mnt/etc/hosts
+    path: /etc/hosts
     regexp: '^::1\s+localhost'
     line: ::1		localhost
 
 - name: Add IPv4 localdomain address to hosts file
   lineinfile:
-    path: /mnt/etc/hosts
+    path: /etc/hosts
     regexp: '{{hostname}}'
     line: "127.0.1.1	{{hostname}}.localdomain	{{hostname}}"
 
 - name: Create mkinitcpio.conf
   copy:
-    dest: /mnt/etc/mkinitcpio.conf
+    dest: /etc/mkinitcpio.conf
     content: |
       MODULES=(i915)
       BINARIES=()
@@ -69,7 +66,7 @@
       HOOKS=(base udev autodetect keyboard keymap modconf block filesystems encrypt lvm2 resume fsck)
 
 - name: mkinitcpio
-  command: arch-chroot /mnt mkinitcpio -P
+  command: mkinitcpio -P
 
 #- name: Configure pacman mirrors
 #  shell: curl -s "https://www.archlinux.org/mirrorlist/?country=DK&country=FI&country=DE&country=IS&country=NO&country=SE&country=GB&protocol=https&ip_version=4&use_mirror_status=on" | sed -e 's/^#Server/Server/' -e '/^#/d' | rankmirrors -n 10 - > /mnt/etc/pacman.d/mirrorlist
