Split big main role files into smaller files

--- a/ansible/roles/partitioning/tasks/main.yml
+++ b/ansible/roles/partitioning/tasks/main.yml
@@ -2,98 +2,9 @@
 - name: Update the system clock
   command: timedatectl set-ntp true
 
-- name: "Read device information"
-  parted:
-    device: "{{ install_disk }}"
-    unit: MiB
-  register: install_disk_info
-
-- name: "Remove all partitions from disk"
-  parted:
-    device: "{{ install_disk }}"
-    number: "{{ item.num }}"
-    state: absent
-  loop: "{{ install_disk_info.partitions }}"
-
-- name: Create ESP
-  parted:
-    device: "{{ install_disk }}"
-    name: EFI System Partition
-    number: 1
-    label: gpt
-    flags: [ esp, boot ]
-    state: present
-    part_end: 551MiB
-
-- name: Create system partition
-  parted:
-    device: "{{ install_disk }}"
-    name: system
-    number: 2
-    label: gpt
-    state: present
-    part_start: 551MiB
-
-- name: Enumerate created partitions
-  shell: lsblk -n -o PATH "{{ install_disk }}" | tail -n +2
-  register: _partitions
-  changed_when: no
-
-- name: Assign partitions to variables
-  set_fact:
-    efi_system_partition: "{{ _partitions.stdout_lines[0] }}"
-    encrypted_lvm_partition: "{{ _partitions.stdout_lines[1] }}"
-
-- name: Encrypt system partition
-  shell: printf {{ luks_password }} |cryptsetup luksFormat --type luks2 {{ encrypted_lvm_partition }} -
-
-- name: Open encrypted system partition
-  shell: 'echo -n {{ luks_password }} |cryptsetup open {{ encrypted_lvm_partition }} cryptlvm -'
-
-- name: Create LVM volume group "vg.main"
-  lvg:
-    vg: vg.main
-    pvs: /dev/mapper/cryptlvm
-
-- name: Create logical volume vg.main-swap
-  lvol:
-    vg: vg.main
-    lv: swap
-    size: "{{ 2 * ansible_memtotal_mb }}"
-
-- name: Create logical volume vg.main-root
-  lvol:
-    vg: vg.main
-    lv: root
-    size: 100%FREE
-
-- name: Format ESP as FAT32
-  filesystem:
-    fstype: vfat
-    dev: "{{ efi_system_partition }}"
-    opts: -F32 -n EFI
-
-- name: Format vg.main-swap
-  command: mkswap /dev/vg.main/swap
-
-- name: Format vg.main-root
-  filesystem:
-    fstype: ext4
-    dev : /dev/vg.main/root
-
-- name: Format swap
-  command: swapon /dev/vg.main/swap
-
-- name: Mount root
-  mount:
-    path: /mnt
-    src: /dev/vg.main/root
-    fstype: ext4
-    state: mounted
-
-- name: Mount ESP
-  mount:
-    name: /mnt/boot
-    src: "{{ efi_system_partition }}"
-    fstype: vfat
-    state: mounted
+- import_tasks: erase_disk.yml
+- import_tasks: create_partitions.yml
+- import_tasks: collect_facts.yml
+- import_tasks: setup_lvm_on_luks.yml
+- import_tasks: format_partitions.yml
+- import_tasks: mount_file_systems.yml
