--- a/ansible/roles/system-config/tasks/main.yml
+++ b/ansible/roles/system-config/tasks/main.yml
@@ -1,72 +1,9 @@
 ---
-- name: time zone
-  file:
-    src: /usr/share/zoneinfo/Europe/Stockholm
-    dest: /etc/localtime
-    state: link
 
-- name: Sync time with hardware clock
-  shell: hwclock --systohc
-
-- name: Create locale.gen
-  copy:
-    dest: /etc/locale.gen
-    content: |
-      en_GB.UTF-8 UTF-8
-      de_DE.UTF-8 UTF-8
-      sv_SE.UTF-8 UTF-8
-    mode: 0644
-
-- name: Run locale-gen
-  shell: locale-gen
-
-- name: Set LANG variable
-  copy:
-    dest: /etc/locale.conf
-    content: LANG=de_DE.UTF-8
-    mode: 0644
-
-- name: Make swedish keyboard layout persistent
-  copy:
-    dest: /etc/vconsole.conf
-    content: "KEYMAP=sv-latin1"
-    mode: 0644
-
-- name: Set hostname
-  copy:
-    dest: /etc/hostname
-    content: "{{hostname}}"
-    mode: 0644
-
-- name: Add IPv4 loopback address to hosts file
-  lineinfile:
-    path: /etc/hosts
-    regexp: '^127\.0\.0\.1\s+localhost'
-    line: 127.0.0.1	localhost
-
-- name: Add IPv6 loopback address to hosts file
-  lineinfile:
-    path: /etc/hosts
-    regexp: '^::1\s+localhost'
-    line: ::1		localhost
-
-- name: Add IPv4 localdomain address to hosts file
-  lineinfile:
-    path: /etc/hosts
-    regexp: '{{hostname}}'
-    line: "127.0.1.1	{{hostname}}.localdomain	{{hostname}}"
-
-- name: Create mkinitcpio.conf
-  copy:
-    dest: /etc/mkinitcpio.conf
-    content: |
-      MODULES=(i915)
-      BINARIES=()
-      FILES=()
-      HOOKS=(base udev autodetect keyboard keymap modconf block filesystems encrypt lvm2 resume fsck)
-
-- name: mkinitcpio
-  command: mkinitcpio -P
+- import_tasks: timezone.yml
+- import_tasks: localisation.yml
+- import_tasks: network.yml
+- import_tasks: initramfs.yml
 
 #- name: Configure pacman mirrors
 #  shell: curl -s "https://www.archlinux.org/mirrorlist/?country=DK&country=FI&country=DE&country=IS&country=NO&country=SE&country=GB&protocol=https&ip_version=4&use_mirror_status=on" | sed -e 's/^#Server/Server/' -e '/^#/d' | rankmirrors -n 10 - > /mnt/etc/pacman.d/mirrorlist
