--- a/ansible/roles/bootloader/tasks/main.yml
+++ b/ansible/roles/bootloader/tasks/main.yml
@@ -5,7 +5,7 @@
     creates: /boot/EFI/systemd/systemd-bootx64.efi
 
 - name: Get root's UUID
-  command: lsblk -n -o UUID /dev/sda2
+  command: blkid "/dev/disk/by-partlabel/{{ partitions.luks2_encrypted_partition }}" -s UUID -o value
   register: _uuid
   changed_when: false
 
