--- a/ansible/roles/pacstrap/tasks/main.yml
+++ b/ansible/roles/pacstrap/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
 - name: Install essential packages
-  command: "pacstrap /mnt base linux linux-firmware intel-ucode lvm2 python"
+  command: "pacstrap /mnt base linux linux-firmware intel-ucode lvm2 python ansible wpa_supplicant"
+
+- import_tasks: fstab.yml
