--- a/ansible/roles/partitioning/tasks/format_partitions.yml
+++ b/ansible/roles/partitioning/tasks/format_partitions.yml
@@ -2,7 +2,7 @@
 - name: Format ESP as FAT32
   filesystem:
     fstype: vfat
-    dev: "{{ efi_system_partition }}"
+    dev: "/dev/disk/by-partlabel/{{ partitions.esp }}"
     opts: -F32 -n EFI
 
 - name: Format vg.main-swap
