--- a/ansible/roles/system-config/tasks/initramfs.yml
+++ b/ansible/roles/system-config/tasks/initramfs.yml
@@ -1,5 +1,5 @@
 ---
--name: Create mkinitcpio.conf
+- name: Create mkinitcpio.conf
   copy:
     dest: /etc/mkinitcpio.conf
     content: |
@@ -7,6 +7,8 @@
       BINARIES=()
       FILES=()
       HOOKS=(base udev autodetect keyboard keymap modconf block filesystems encrypt lvm2 resume fsck)
+  tags: 'debug'
 
-  - name: mkinitcpio
-    command: mkinitcpio -P
+- name: mkinitcpio
+  command: mkinitcpio -P
+  tags: 'debug'
