--- a/ansible/roles/os-install/tasks/main.yml
+++ b/ansible/roles/os-install/tasks/main.yml
@@ -4,7 +4,9 @@
 
 - import_tasks: erase_disk.yml
 - import_tasks: create_partitions.yml
-- import_tasks: collect_facts.yml
 - import_tasks: setup_lvm_on_luks.yml
 - import_tasks: format_partitions.yml
 - import_tasks: mount_file_systems.yml
+
+- import_tasks: pacstrap.yml
+- import_tasks: fstab.yml
