--- a/ansible/roles/os-install--config/tasks/passwd.yml
+++ b/ansible/roles/os-install--config/tasks/passwd.yml
@@ -2,4 +2,4 @@
 - name: Set root password
   user:
     name: root
-    password: "{{ root_password }}"
+    password: "{{ hostvars.localhost.root_password }}"
