--- a/ansible/roles/os-install/tasks/setup_lvm_on_luks.yml
+++ b/ansible/roles/os-install/tasks/setup_lvm_on_luks.yml
@@ -1,9 +1,9 @@
 ---
 - name: Encrypt system partition
-  shell: printf {{ luks_password }} |cryptsetup luksFormat --type luks2 "/dev/disk/by-partlabel/{{ partitions.luks2_encrypted_partition }}" -
+  shell: printf {{ luks_password }} |cryptsetup luksFormat --type luks2 "/dev/disk/by-partlabel/{{ partitions.encrypted }}" -
 
 - name: Open encrypted system partition
-  shell: echo -n {{ luks_password }} |cryptsetup open "/dev/disk/by-partlabel/{{ partitions.luks2_encrypted_partition }}" cryptlvm -
+  shell: echo -n {{ luks_password }} |cryptsetup open "/dev/disk/by-partlabel/{{ partitions.encrypted }}" cryptlvm -
 
 - name: Create LVM volume group "vg.main"
   lvg:
@@ -14,7 +14,7 @@
   lvol:
     vg: vg.main
     lv: swap
-    size: "{{ 2 * ansible_memtotal_mb }}"
+    size: "{{ ansible_memtotal_mb }}"
 
 - name: Create logical volume "vg.main-root"
   lvol:
