--- a/ansible/roles/base/tasks/userconfig.yml
+++ b/ansible/roles/base/tasks/userconfig.yml
@@ -29,3 +29,12 @@
     dest: /etc/sudoers
     src: sudoers
     mode: 0440
+
+- user:
+    name: aur_builder
+    group: wheel
+#- lineinfile:
+#    path: /etc/sudoers.d/11-install-aur_builder
+#    line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
+#    create: yes
+#    validate: 'visudo -cf %s'
