--- a/ansible/roles/dev-tools/tasks/main.yml
+++ b/ansible/roles/dev-tools/tasks/main.yml
@@ -31,8 +31,10 @@
     - name: Import nodejs release team gpg keys
       command: bash -c "${ASDF_DATA_DIR=$HOME/.asdf}/plugins/nodejs/bin/import-release-team-keyring"
 
-    - name: Install latest node LTS version
-      command: "${HOME}/.asdf/bin/asdf install nodejs 12.18.3"
+#    - name: Install latest node LTS version
+#      command: "${HOME}/.asdf/bin/asdf install nodejs 12.18.3"
+#      retries: 3
+#      delay: 2
 
   become: yes
   become_user: "{{ user.name }}"
