--- a/ansible/roles/os-install/tasks/main.yml
+++ b/ansible/roles/os-install/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 
 - import_tasks: erase_install_disk.yml
-- import_tasks: setup_partition_layout.yml
-- import_tasks: format_partitions.yml
-- import_tasks: mount_file_systems.yml
+- import_tasks: partition.yml
+- import_tasks: format.yml
+- import_tasks: mount.yml
 
 - import_tasks: mirrorlist.yml
 - import_tasks: pacstrap.yml
