--- a/ansible/roles/syslinux/tasks/main.yml
+++ b/ansible/roles/syslinux/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Install syslinux
   package:
-    name: syslinux gptfdisk mtools
+    name: syslinux gptfdisk
 
 - name: Ensure syslinux dir exists
   file:
@@ -24,14 +24,14 @@
 - name: Install MBR
   shell: "dd bs=440 count=1 conv=notrunc if=/usr/lib/syslinux/bios/gptmbr.bin of=/dev/sda"
 
-- name: Get LUKS partition UUID
-  command: blkid "/dev/disk/by-partlabel/{{ partitions.encrypted }}" -s UUID -o value
-  register: _uuid
-  changed_when: false
+#- name: Get LUKS partition UUID
+#  command: blkid "/dev/disk/by-partlabel/{{ partitions.encrypted }}" -s UUID -o value
+#  register: _uuid
+#  changed_when: false
 
 - name: Copy syslinux.cfg
-  vars:
-    root_uuid: "{{ _uuid.stdout_lines[0] }}"
+#  vars:
+#    root_uuid: "{{ _uuid.stdout_lines[0] }}"
   template:
     src: syslinux.cfg.j2
     dest: /boot/syslinux/syslinux.cfg
