--- a/ansible/roles/systemd-boot/tasks/main.yml
+++ b/ansible/roles/systemd-boot/tasks/main.yml
@@ -4,10 +4,10 @@
   args:
     creates: /boot/EFI/systemd/systemd-bootx64.efi
 
-- name: Get root's UUID
-  command: blkid "/dev/disk/by-partlabel/{{ partitions.encrypted }}" -s UUID -o value
-  register: _uuid
-  changed_when: false
+#- name: Get root's UUID
+#  command: blkid "/dev/disk/by-partlabel/{{ partitions.encrypted }}" -s UUID -o value
+#  register: _uuid
+#  changed_when: false
 
 - name: Create systemd-boot loader.conf
   copy:
@@ -16,8 +16,8 @@
     mode: 0644
 
 - name: Install systemd-boot entry arch.conf
-  vars:
-    root_uuid: "{{ _uuid.stdout_lines[0] }}"
+#  vars:
+#    root_uuid: "{{ _uuid.stdout_lines[0] }}"
   template:
     src: templates/arch.conf.j2
     dest: /boot/loader/entries/arch.conf
