--- a/ansible/roles/network/tasks/main.yml
+++ b/ansible/roles/network/tasks/main.yml
@@ -1,29 +1,5 @@
 ---
 
-- name: Set hostname
-  copy:
-    dest: /etc/hostname
-    content: "{{ hostname }}"
-    mode: 0644
-
-
-- name: Init /etc/hosts
-  template:
-    src: hosts.j2
-    dest: /etc/hosts
-    mode: 0644
-
-
-- name: Install NetworkManager
-  pacman:
-    name:
-      - networkmanager
-      - network-manager-applet
-    state: present
-
-
-- name: Enable NetworkManager
-  command: "systemctl enable NetworkManager.service"
-#    name: NetworkManager
-#    state: started
-#    enabled: yes
+- import_tasks: hostname.yml
+- import_tasks: hostsfile.yml
+- import_tasks: networkmanager.yml
