Use luks_device ansible module instead of shell commands for LUKS setup

--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -12,6 +12,7 @@ partitions:
     luks:
         label: 'LUKS'
         dev: '/dev/disk/by-partlabel/LUKS'
+        mapper_name: 'cryptlvm'
 
 lvm:
     vg_main: 'vg.main'
