--- a/ansible/roles/os-install/tasks/partition.yml
+++ b/ansible/roles/os-install/tasks/partition.yml
@@ -32,22 +32,27 @@
     state: present
     part_start: 551MiB
 
-- name: Encrypt LUKS partition
-  shell: >
-    echo -n {{ luks_password }} |
-    cryptsetup -q luksFormat --type luks2 --label "{{ partitions.luks.label }}" "{{ partitions.luks.dev }}"
+- name: Create LUKS container
+  community.crypto.luks_device:
+    device: "{{ partitions.luks.dev }}"
+    label: "{{ partitions.luks.label }}"
+    state: 'present'
+    passphrase: "{{ luks_password }}"
+    type: luks2
   no_log: true
 
-- name: Open LUKS partition
-  shell: >
-    echo -n {{ luks_password }} |
-    cryptsetup -q open "{{ partitions.luks.dev }}" cryptlvm
+- name: Open the LUKS container
+  community.crypto.luks_device:
+    device: "{{ partitions.luks.dev }}"
+    state: 'opened'
+    name: "{{ partitions.luks.mapper_name }}"
+    passphrase: "{{ luks_password }}"
   no_log: true
 
 - name: Create main LVM volume group
   lvg:
     vg: "{{ lvm.vg_main }}"
-    pvs: /dev/mapper/cryptlvm
+    pvs: "/dev/mapper/{{ partitions.luks.mapper_name }}"
 
 - name: Create logical volume for swap
   lvol:
