Split os-install into more files

--- a/ansible/roles/os-install/tasks/main.yml
+++ b/ansible/roles/os-install/tasks/main.yml
@@ -2,6 +2,9 @@
 
 - import_tasks: erase_install_disk.yml
 - import_tasks: partition.yml
+- import_tasks: encrypt.yml
+- import_tasks: lvm.yml
+
 - import_tasks: format.yml
 - import_tasks: mount.yml
 
