--- a/ansible/install-os.yml
+++ b/ansible/install-os.yml
@@ -3,6 +3,8 @@
 - name: bootstrap Arch Linux system
   hosts: localhost
   become: yes
+  vars:
+    arch_root: '/mnt'
   vars_prompt:
     - name: luks_password
       prompt: "luks password"
@@ -49,7 +51,7 @@
   connection: local
   tasks:
     - name: Unmount partitions
-      command: umount -Rf /mnt
+      command: "umount -Rf {{ arch_root }}"
       tags: 'cleanup'
 
     - name: unmount swap
